--- a/CSS-files/main.css
+++ b/CSS-files/main.css
@@ -1,5 +1,5 @@
 .nav a {
-    color: #5a5a5a;
+    color: #0066FF;
     font-size: 11px;
     font-weight: bold;
     padding: 14px 10px;
@@ -10,24 +10,6 @@
     display: inline;
 }
 
-.page-header {
-    background-image:url('http://wallpoper.com/images/00/25/59/08/deadlift-bar_00255908.jpg');
-    height: 500px;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.page-header h1 {
-    color: #fff;
-    font-size: 48px;  
-    font-family: 'Shift', sans-serif;
-    font-weight: bold;
-}
-
-.page-header p {
-    font-size: 20px;
-    color: #fff;
-}
 
 .learn-more {
     background-color: #f7f7f7;
@@ -64,10 +46,137 @@
     font-weight: bold;
 }
 
-.navbar-bottom {
+#bottomNavbar {
     min-height: 100px;
     margin-top: 100px;
-    background-color: #28364f;
+    background-color: #0066FF;
     padding-top: 35px;
     color:#FFFFFF;
+}
+
+
+
+
+
+/* bootstrap 3 helpers */
+
+.navbar-form input, .form-inline input {
+    width:auto;
+}
+
+/* end */
+
+/* custom theme */
+
+header {
+    min-height:230px;
+    margin-bottom:5px;
+}
+
+@media (min-width: 979px) {
+  #sidebar.affix-top {
+      position: static;
+  }
+  
+  #sidebar.affix {
+      position: fixed;
+      top: 0;
+      width:21.2%;
+  }
+}
+
+.affix,.affix-top {
+   position:static;
+}
+
+/* theme */
+
+body {
+  color:#828282;
+  background-color:#eee;
+}
+
+a,a:hover {
+    color:#ff3333;
+    text-decoration:none;
+}
+
+.highlight-bk {
+    background-color:#ff3333;
+    padding:1px;
+    width:100%;
+}
+
+.highlight {
+    color:#ff3333;
+}
+  
+h3.highlight  {
+    padding-top:13px;
+    padding-bottom:14px;
+    border-bottom:2px solid #ff3333;
+}
+
+.navbar {
+    background-color:#ff3333;
+    color:#ffffff;
+    border:0;
+    border-radius:0;
+}
+.navbar-nav > li > a {
+    color:#fff;
+    padding-left:20px;
+    padding-right:20px;
+    border-left:1px solid #ee3333;
+}
+.navbar-nav > li > a:hover, .navbar-nav > li > a:focus {
+    color:#666666; 
+}
+.navbar-nav > li:last-child > a {
+    border-right:1px solid #ee3333;
+}
+.navbar-nav > .active > a, .navbar-nav > .active > a:hover, .navbar-nav > .active > a:focus {
+    color: #ffffff;
+    background-color:transparent;
+}
+.navbar-nav > .open > a, .navbar-nav > .open > a:hover, .navbar-nav > .open > a:focus {
+    color: #f0f0f0;
+    background-color:transparent;
+    opacity:.9;
+    border-color:#ff3333;
+}
+
+.nav .open > a {
+    border-color:#777777;
+    border-width:0;
+}
+
+.accordion-group {
+    border-width:0;
+}
+
+.dropdown-menu {
+    min-width: 250px;
+}
+
+.accordion-heading .accordion-toggle, .accordion-inner, .nav-stacked li > a {
+    padding-left:1px;
+}
+
+.caret {
+    color:#fff;
+}
+
+.navbar-toggle {
+    color:#fff;
+    border-width:0;
+}
+  
+.navbar-toggle:hover {
+    background-color:#fff;
+}
+
+.panel {
+    padding-left:27px;
+    padding-right:27px;
 }
